crates/toml_edit/tests/snapshots/invalid/key/after-array.stderr
TOML parse error at line 1, column 14
  |
1 | [[agencies]] owner = "S Cjelli"
  |              ^
unexpected key or value, expected newline, `#`
